<resources>
    <!--use this for Language translation: https://docs.google.com/spreadsheets/d/1oCZN46tUj1A3eqJFaCMpK2dbCl9ZQ1U2yDzYkemjNhQ/edit?gid=0#gid=0-->
    <string name="app_name">Calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="navigate_up">Navigate up</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="roboto_regular" translatable="false">sans-serif</string>

    <string name="menu_home">Home</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="short_mon">M</string>
    <string name="short_tue">T</string>
    <string name="short_wed">W</string>
    <string name="short_thu">T</string>
    <string name="short_fri">F</string>
    <string name="short_sat">S</string>
    <string name="short_sun">S</string>

    <string name="jan">January</string>
    <string name="fab">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <string name="add_event">Add Event</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_month">Calendar Month</string>
    <string name="calendar_year">Calendar Year</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="select_country">Select country</string>
    <string name="select_language">Select language</string>
    <string name="first_day_of_the_week">First day of the week</string>
    <string name="jump_to_date">Jump to date</string>
    <string name="app_theme">App theme</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="device_information">Device information</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>

    <string name="action_refresh">Refresh</string>
    <string name="new_event">New Event</string>
    <string name="update_event">Update Event</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="view_event">View Event</string>
    <string name="event_title">Event Title</string>
    <string name="no_description">No description</string>
    <string name="action_delete">Delete</string>
    <string name="event_deleted">Event deleted!</string>
    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="number_picker_formatter_year" translatable="false">%04d</string>
    <string name="number_picker_formatter_month" translatable="false">%02d</string>
    <string name="number_picker_formatter_date" translatable="false">%02d</string>
    <string name="title_activity_splash_fullscreen" translatable="false">SplashFullscreenActivity</string>
    <string name="app_icon" translatable="false">App icon</string>

    <string name="all_day">All Day</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="alert">Alert</string>
    <string name="none">None</string>
    <string name="note">Note</string>
    <string name="country_header">Country</string>
    <string name="at_once">At once</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="at_time">At time of event</string>
    <string name="before_5_minutes">5 minutes before</string>
    <string name="before_10_minutes">10 minutes before</string>
    <string name="before_15_minutes">15 minutes before</string>
    <string name="before_30_minutes">30 minutes before</string>
    <string name="before_1_hour">1 hour before</string>
    <string name="before_1_day">1 day before</string>
    <string name="before_custom_time">Custom alert</string>
    <string name="custom_alert">Custom alert</string>
    <string name="minutes_before">minutes before</string>
    <string name="min">min</string>

    <string name="cancel">Cancel</string>
    <string name="jump">Jump</string>
    <string name="first_date_of_the_week">First date of the week</string>
    <string name="done">Done</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>

    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_theme">System theme</string>

    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="app_version">App Version</string>
    <string name="os">Os</string>
    <string name="abi">ABI</string>
    <string name="version">Version</string>
    <string name="okay">Okay</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="app_language">App language</string>
    <string name="time_format">Time format</string>
    <string name="rate_on_google_play">Rate on google play</string>
    <string name="share_app">Share app</string>
    <string name="feedback">Feedback</string>
    <string name="device_info">Device info</string>
    <string name="format_12_hours">12 hours format</string>
    <string name="format_24_hours">24 hours format</string>
    <string name="search_event">Search event…</string>
    <string name="search_country">Search country…</string>

    <string name="deny_permission_msg_calendar">Calendar permissions are required for the app to function.</string>
    <string name="deny_permission_msg_notification">Permission required to show notifications.</string>

    <string name="personalization">"Personalization : "</string>
    <string name="about">"About : "</string>
    <string name="schedule_event">Schedule</string>
    <string name="invalid_time_range">The range between 0 to 59!</string>
    <string name="no_data">Data not found!</string>
    <string name="event_title_cannot_empty">Event title cannot be empty.</string>
    <string name="start_date_cannot_be_after_end_date">Start date cannot be after end date.</string>
    <string name="start_time_cannot_be_after_end_time">Start time cannot be after end time.</string>
    <string name="an_event_with_this_title_and_type_already_exists">An event with this title and type already exists.</string>

    <string name="custom_time_is_not_set">Custom time is not set!</string>
    <string name="event_insert_successfully">Event insert successfully!</string>
    <string name="event_update_successfully">Event update successfully!</string>
    <string name="search_icon">Search Icon</string>
    <string name="check_icon">Check icon</string>
    <string name="_00">00</string>
    <string name="monday_1_january_2025">Monday 1 January 2025</string>
    <string name="year_picker">Year picker</string>
    <string name="month_picker">Month picker</string>
    <string name="date_picker">Date picker</string>
    <string name="time_format_12_hr">Time format 12 hr</string>
    <string name="time_format_24_hr">Time format 24 hr</string>
    <string name="drawer_icon">Drawer Icon</string>
    <string name="menu_item">Menu Item</string>
    <string name="left_arrow_icon">Left arrow icon</string>
    <string name="right_arrow_icon">Right arrow icon</string>
    <string name="start_date_to_end_date_icon">Start date to end date icon</string>
    <string name="schedule_s_image_for_month">Schedule\'s image for month</string>
    <string name="yearview_scrolling">YearView scrolling</string>
    <string name="default_selected_1_country">Default selected 1 country</string>
    <string name="enter_the_minutes">Enter the minutes</string>
    <string name="auto_start_permissions">Auto Start Permissions</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="battery_optimization_message">Enable this setting to allow the app to send notifications for scheduled events on time. If disabled, notifications may not appear, and reminders may fail to trigger.</string>
    <string name="auto_start_permissions_message">Please enable AutoStart permission to ensure event reminders and notifications work properly, even when the app is closed or removed from the background.</string>
    <string name="required_permission">Required permission</string>
    <string name="deny_permission_msg">Permissions are required, go to application settings and then allow it.</string>


</resources>