<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_year">

    <fragment
        android:id="@+id/nav_year"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.calendar_year_1.CalendarYear1Fragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_calendar_year1">
        <!--android:label="@string/calendar_year"-->
        <action
            android:id="@+id/action_calendarYear1Fragment_to_calendarMonth1Fragment"
            app:destination="@id/nav_month" />
    </fragment>

    <fragment
        android:id="@+id/nav_month"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.calendar_month_1.CalendarMonth1Fragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_calendar_month1"/>
        <!--android:label="@string/calendar_month"-->

    <fragment
        android:id="@+id/nav_select_country"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.country.CountryFragment"
        android:label="@string/select_country"
        tools:layout="@layout/fragment_country" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/searchEventFragment"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.search_event.SearchEventFragment"
        android:label="@string/schedule_event"
        tools:layout="@layout/fragment_search_event" />

    <fragment
        android:id="@+id/newEventFragment"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.new_event.NewEventFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_new_event" />

    <fragment
        android:id="@+id/viewEventFragment"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.view_event.ViewEventFragment"
        android:label="@string/view_event"
        tools:layout="@layout/fragment_view_event" />

    <fragment
        android:id="@+id/repeatOptionFragment"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.repeat_option.RepeatOptionFragment"
        android:label="@string/repeat"
        tools:layout="@layout/fragment_repeat_option" />

    <fragment
        android:id="@+id/alertOptionFragment"
        android:name="calendar.schedule.task.todo.event.reminder.presentation.ui.alert_option.AlertOptionFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert_option" />

</navigation>