<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/calendarMonth1Fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendar_month" />

        <item
            android:id="@+id/calendarYear1Fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendar_year" />

        <item
            android:id="@+id/calendarMonthFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendar_month" />

        <item
            android:id="@+id/calendarYearFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendar_year" />

        <item
            android:id="@+id/jumpToDate"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/jump_to_date" />-->

        <item
            android:id="@+id/nav_year"
            android:icon="?attr/iconYear"
            android:title="@string/calendar_year" />
        <item
            android:id="@+id/nav_month"
            android:icon="?attr/iconMonth"
            android:title="@string/calendar_month" />
        <item
            android:id="@+id/nav_select_country"
            android:icon="?attr/iconCountry"
            android:title="Select country" />
        <item
            android:id="@+id/nav_select_language"
            android:icon="?attr/iconLanguage"
            android:title="Select language" />
        <item
            android:id="@+id/nav_first_day_of_week"
            android:icon="?attr/iconCalendar"
            android:title="First day of the week" />
        <item
            android:id="@+id/nav_jump_to_date"
            android:icon="?attr/iconJumpToDate"
            android:title="@string/jump_to_date" />
        <item
            android:id="@+id/nav_app_theme"
            android:icon="?attr/iconTheme"
            android:title="App theme" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="?attr/iconRateApp"
            android:title="Rate our app" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="?attr/iconPrivacy"
            android:title="Privacy policy" />
        <item
            android:id="@+id/nav_device_info"
            android:icon="?attr/iconDeviceInfo"
            android:title="Device information" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/settings" />

    </group>
</menu>