<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <!--        android:background="@drawable/dialog_background"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/jumpToDateBackground"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dialog.Alert"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/post_nord_sans_medium"
            android:padding="16dp"
            android:text="@string/device_information"
            android:textAlignment="textStart"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_16sdp"
            android:weightSum="2.8">

            <TextView
                android:id="@+id/dialogDeviceInformation_Brand"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/brand"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toTopOf="@id/dialogDeviceInformation_Device"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialogDeviceInformation_Device"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/device"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toTopOf="@id/dialogDeviceInformation_AppVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDeviceInformation_Brand" />

            <TextView
                android:id="@+id/dialogDeviceInformation_AppVersion"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/app_version"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toTopOf="@id/dialogDeviceInformation_Os"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDeviceInformation_Device" />

            <TextView
                android:id="@+id/dialogDeviceInformation_Os"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/os"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toTopOf="@id/dialogDeviceInformation_ABI"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDeviceInformation_AppVersion" />

            <TextView
                android:id="@+id/dialogDeviceInformation_ABI"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/abi"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toTopOf="@id/dialogDeviceInformation_Version"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDeviceInformation_Os" />

            <TextView
                android:id="@+id/dialogDeviceInformation_Version"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/post_nord_sans_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/version"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDeviceInformation_ABI" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingVertical="0dp">

            <Button
                android:id="@+id/btn_okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/post_nord_sans_medium"
                android:text="@string/okay"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>