<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dialogHorizontalSpacing"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding"
        android:theme="@style/ThemeOverlay.AppCompat.Dialog.Alert"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/TextViewStyle.medium"
            android:text="@string/first_date_of_the_week"
            android:textSize="@dimen/dialog_TextSize_1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialogVerticalSpacingBetweenTitleContent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogFirstDayOfTheWeek_Sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle.regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/sunday"
                android:textSize="@dimen/dialog_TextSize_3"
                app:layout_constraintBottom_toTopOf="@id/dialogFirstDayOfTheWeek_Monday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogVerticalSpacingBetweenContent"/>

            <TextView
                android:id="@+id/dialogFirstDayOfTheWeek_Monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle.regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/monday"
                android:textSize="@dimen/dialog_TextSize_3"
                app:layout_constraintBottom_toTopOf="@id/dialogFirstDayOfTheWeek_Saturday"
                app:layout_constraintStart_toStartOf="@id/dialogFirstDayOfTheWeek_Sunday"
                app:layout_constraintTop_toBottomOf="@id/dialogFirstDayOfTheWeek_Sunday" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogVerticalSpacingBetweenContent"/>

            <TextView
                android:id="@+id/dialogFirstDayOfTheWeek_Saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle.regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/saturday"
                android:textSize="@dimen/dialog_TextSize_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dialogFirstDayOfTheWeek_Monday"
                app:layout_constraintTop_toBottomOf="@id/dialogFirstDayOfTheWeek_Monday" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialogVerticalSpacingBetweenContentFooter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle.medium"
                android:textColor="@color/text_secondary"
                android:text="@string/cancel"
                android:textSize="@dimen/dialog_TextSize_2" />

            <Space
                android:layout_width="@dimen/dialogHorizontalBetweenBtnSpacing"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle.medium"
                android:textSize="@dimen/dialog_TextSize_2"
                android:text="@string/done"
                android:textColor="@color/error"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>